--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Liberry</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <h1>Hello World!</h1>
-</body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="header"><h1>Welcome To The Liberry!</h1></div>
+    <div class="main">
+      <div class="big_pic"><img src="/" alt="" /></div>
+      <div class="about">
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis ad
+          consectetur laudantium.
+        </p>
+      </div>
+      <div class="two_pic">
+        <div class="left_side">
+          <div class="left_head"><h2>Left Pic</h2></div>
+          <div class="left_pic"><img src="/" alt="" /></div>
+        </div>
+        <div class="right_side">
+          <div class="right_head"><h2>Right Pic</h2></div>
+          <div class="right_pic"><img src="/" alt="" /></div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
