less place holders

--- a/index.html
+++ b/index.html
@@ -13,18 +13,17 @@
       <div class="big_pic"><img src="/" alt="" /></div>
       <div class="about">
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis ad
-          consectetur laudantium.
+          The Liberry is an non-profit organization that aims to help adults get access to free martials to help them get ahead.
         </p>
       </div>
       <div class="two_pic">
         <div class="left_side">
           <div class="left_head"><h2>Left Pic</h2></div>
-          <div class="left_pic"><img src="/" alt="" /></div>
+          <div class="left_pic"><img class="left_pic" src="images/script.jpg" alt="" /></div>
         </div>
         <div class="right_side">
           <div class="right_head"><h2>Right Pic</h2></div>
-          <div class="right_pic"><img src="/" alt="" /></div>
+          <div class="right_pic"><img class="right_pic" src="images/library-interior-old-books.jpg" alt="" /></div>
         </div>
       </div>
     </div>
