donate page btns and content

--- a/index.html
+++ b/index.html
@@ -13,19 +13,34 @@
       <div class="big_pic"><img src="/" alt="" /></div>
       <div class="about">
         <p>
-          The Liberry is an non-profit organization that aims to help adults get access to free martials to help them get ahead.
+          The Liberry is an organization that aims to help dyslexic adults get access to free martials to help them get ahead.
         </p>
       </div>
       <div class="two_pic">
         <div class="left_side">
-          <div class="left_head"><h2>Left Pic</h2></div>
+          <div class="left_head"><h2>Writing Resources</h2>
+            <p>One of the best and most useful resources <br> is a good spell check and grammar check like <a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwiV1--tk935AhVHG9QBHTnYDDEYABAAGgJvYQ&ohost=www.google.com&cid=CAESbeD22jZUxdt7uRGspBqfrA6t53eVvvtz2xUFPHr1vU5nDuhBCVAJGc1-hlGyy4uAGrdEcRPrMU8sxpow8vsRRbSbFKOxrCuWH7pRafjNsk3gxFF6Jy7BNzgqDF9k0P_3J6gdsemEe1ucHJKDKSU&sig=AOD64_3LVByyxhIpEoN4vtOUSkD10spNBA&q&adurl&ved=2ahUKEwiFwuStk935AhWwjIkEHXaACaoQ0Qx6BAgCEAE&nis=2">Grammarly</a>. </p>
+          </div>
           <div class="left_pic"><img class="left_pic" src="images/script.jpg" alt="" /></div>
         </div>
         <div class="right_side">
-          <div class="right_head"><h2>Right Pic</h2></div>
+          <div class="right_head">
+            <h2>Reading Resources</h2>
+            <p>One helpful place for reading help is <em> Online Reading Tutor</em>. <br>
+            Another great resource for dyslexic readers is <a href="https://dyslexia.yale.edu">(YCDC)</a>
+            </p>
+        </div>
           <div class="right_pic"><img class="right_pic" src="images/library-interior-old-books.jpg" alt="" /></div>
         </div>
       </div>
+    </div>
+    <div class="header"><h1>Help Us Keep Books On The Self</h1></div>
+    <div class="main">
+      <p>
+        With your help we can continue to provide free resources to dyslexic adults 
+      </p>
+      <!--not sure why target _blank doesn't work-->
+      <button class="btn" type="button" onclick="location.href='donate.html';" target="_blank">Donate</button>
     </div>
   </body>
 </html>
